--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>The Wisdom Project</title>
+    <meta name="description" content="Share your wisdom with the world!">
   </head>
   <body>
     <noscript>
